manifests/tenants/mosaic/face_detection/grpc/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: face-detection-grpc
  namespace: mosaic-face-detection
spec:
  parentRefs:
  - name: mosaic-grpc-gateway
    namespace: mosaic-grpc-gateway
  hostnames:
  - "api.verturus.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /face_detection.FaceDetectionService/
    backendRefs:
    - name: face-detection-service
      port: 40040
